Fixed column spacing and hover animation

--- a/sass/ecom-styles.scss
+++ b/sass/ecom-styles.scss
@@ -10,6 +10,21 @@ body {
     font-family: 'Baloo Paaji 2', cursive;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background: transparent;
+    border-left: 3.95px solid transparent;
+    border-right: 3.95px solid transparent;
+    border-radius: 4px;
+    box-shadow: inset 0 0 5px #f02020ee;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #ff5e5eee;
+}
+
 .e-commerce-content {
 
     .e-upper-navbar {
@@ -152,7 +167,6 @@ body {
         }
 
         .e-mright-content {
-            margin: 15px;
             width: 100%;
 
             .e-product-card {
@@ -162,7 +176,9 @@ body {
                 cursor: pointer;
 
                 &:hover {
+                    position: absolute;
                     transform: scale(1.04);
+                    width: 26.6%;
                     box-shadow: 2px 0 30px -10px #c4c4c4;
                     transition: all .4s;
 
